--- a/src/style.css
+++ b/src/style.css
@@ -31,12 +31,13 @@
     @apply form-input;
     @apply text-red-700;
     @apply ease-in-out-back;
+    @apply cursor-pointer;
   }
 
   .btn-primary {
     @apply border border-red-700;
     @apply hover:bg-red-700 hover:text-white;
-    @apply disabled:bg-red-800;
+    @apply disabled:text-red-900 disabled:cursor-not-allowed;
   }
 
   .concern {
