--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,7 @@
 
 @layer components {
   .form-input {
+    @apply inline-block;
     @apply bg-zinc-900;
     @apply px-6 py-2;
     @apply transition duration-300;
